feat: add member and poster swagger api docs
